--- a/src/base.css
+++ b/src/base.css
@@ -24,6 +24,7 @@ body {
   font-family: Arial, Helvetica, sans-serif;
   background-color: #fff;
   padding-bottom: 200px;
+  padding-top: 100px;
 }
 
 img {
